welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (100-Math.abs(n)<= 10){
  ^